--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 
 .App-header {
   background-color: #ffffff;
-  min-height: 100vh;
+  min-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,4 +38,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+a  {
+  align-items: center;
+  justify-content: center;
+  color:darkslateblue ; 
+  font-family: 'Aclonica', sans-serif;
+  font-size: calc(15px + 2vmin);
+}
+
+div {
+
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  text-align: center;
+  font-family: 'Aclonica', sans-serif;
+}
+footer{
+  margin-bottom: 50px;
 }
