--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,14 @@
 .App-logo {
   height: 30vmin;
   pointer-events: none;
-  margin-bottom: 30px;
+  margin-bottom:100px;
+  margin-top:100px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+    
   }
 }
 
